--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "prettier": "^2.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
@@ -18,6 +17,9 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
